# MrChoon_AI

./: .gitignore  README.md  prompt.md  pyproject.toml
configs/: step1.hf.json  step1.mock.json  step2.full-train.hf.json  step2.full-train.hf.reuse.json  step2.hf.json  step2.mock.json  step3.mock.json  step3.tcp-dryrun.json
configs/accelerate/: l40s_config.yaml
configs/deepspeed/: offload_z3.json
scripts/: run_step1.py  run_step2.py  run_step2_accelerate.sh  run_step3.py  train_step2_full.py
src/minecraft_vla/: __init__.py  config.py
src/minecraft_vla/data/: __init__.py  minecraft_sft.py
src/minecraft_vla/integration/: __init__.py  minecraft_client.py
src/minecraft_vla/models/: __init__.py  vla_model.py
src/minecraft_vla/training/: __init__.py  qlora.py  step1_pipeline.py  step2_full_train_pipeline.py  step2_pipeline.py  step3_pipeline.py
src/minecraft_vla/utils/: io.py  seed.py
tests/: test_step1_mock.py  test_step2_full_train_pipeline_integration.py  test_step2_full_train_utils.py  test_step2_mock.py  test_step3_mock.py
